--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Chetan Nada's Portfolio</title>
+      <title>Johnsi Portfolio</title>
       <link rel="stylesheet" href="style.css">
       <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -54,12 +54,12 @@
          <div class="max-width">
             <div class="home-content">
                <div class="text-1">Hello 👋 I'm</div>
-               <div class="text-2">Chetan Nada</div>
+               <div class="text-2">Theyboral Johnsi</div>
                <div class="text-3">And I'm a <span class="typing"></span>
                </div>
-               <a class="web" href="#contact">I need a website <i class="fad fa-angle-right"></i>
+               <a class="web" href="#contact">Need to test a website <i class="fad fa-angle-right"></i>
                </a>
-               <a href="https://www.linkedin.com/in/chetannada/" target="_blank">I'm looking to hire <i class="fad fa-angle-right"></i>
+               <a href="https://drive.google.com/file/d/1PEeXyT6PTIFCuDc2uUFHHBckLZ0gz1yY/view" target="_blank">View Resume <i class="fad fa-angle-right"></i>
                </a>
             </div>
          </div>
@@ -71,12 +71,12 @@
             <h2 class="title fadein">About me</h2>
             <div class="about-content">
                <div class="column left">
-                  <img src="images/Chetan Nada.jpg" alt="Chetan Nada">
+                  <img src="images/johnsi.png.jpeg" alt="Johnsi">
                   <div>
                      <div class="wrapper">
                         <div class="button1">
                            <div class="icon">
-                              <a href="https://www.linkedin.com/in/chetannada" target="_blank">
+                              <a href="https://www.linkedin.com/in/theyboral-johnsi-192561297/" target="_blank">
                               <i class="fab fa-linkedin"></i>
                            </div>
                            <span>LinkedIn </a>
@@ -85,7 +85,7 @@
                         <div class="buttonmob">
                            <div class="button1">
                               <div class="icon">
-                                 <a href="https://twitter.com/chetannada" target="_blank">
+                                 <a href="https://twitter.com/" target="_blank">
                                  <i class="fab fa-twitter"></i>
                               </div>
                               <span>Twitter </a>
@@ -95,7 +95,7 @@
                         <div class="buttonmob1"></div>
                         <div class="button1">
                            <div class="icon">
-                              <a href="https://github.com/chetannada" target="_blank">
+                              <a href="https://github.com/Johnsianthoni" target="_blank">
                               <i class="fab fa-github"></i>
                            </div>
                            <span>Github </a>
@@ -105,10 +105,10 @@
                   </div>
                </div>
                <div class="column right">
-                  <div class="text">I'm a Chetan and <span class="break">I'm a <span class="typing2"></span>
+                  <div class="text">I'm a Theyboral Johnsi and <span class="break">I'm a <span class="typing2"></span>
                      </span>
                   </div>
-                  <p>I'm Self-taught React.js Developer. My goal is to build a fast, flexible, mobile-first website that clearly communicates with visitors. I have done B.E in E&C, I am a Youtuber having 90k+ Subscribers. I have experience in the industrial field as a service engineer and in the education field as Mathematics Teacher.</p>
+                  <p>I am a recently completed automation course with a strong interest in automation testing. I have hands-on experience with Python, Selenium, html, css and javascript, gained through the projects. Known for my problem-solving skills and attention to detail, I thrive in collaborative environments. I am eager to start my career in automation testing and contribute to developing high-quality software solutions. I am committed to continuous learning and professional growth in this dynamic field.</p>
                   </a>
                </div>
             </div>
@@ -122,30 +122,22 @@
             <div class="skills-content">
                <div class="column left">
                   <div class="text">My creative skills & experiences</div>
-                  <p>I am a React Js Developer with a passion for learning and can work with estimation of future tasks and client feedback. I am highly-motivated, result oriented, self-driven, hard-working, fast learner and constantly seeking to improve my skills and am fully aware of the latest Front-end Development Tools. I have a firm knowledge of JavaScript and React Js, Parcel js, Node js, Redux, HTML5, CSS3, Git, SASS, Tailwind CSS, Bootstrap, REST API, JSON, Axios, Adobe Photoshop and possess a good knowledge of computer software packages (frameworks and tools) that are used in today’s technology.</p>
+                  <p>I possess extensive skills in Python and Selenium WebDriver, utilizing Selenium IDE for efficient test creation. I am proficient in Pytest for robust test automation and employ the Page Object Model (POM) for scalable test architecture. My expertise includes generating detailed reports with Pytest-HTML, along with a solid understanding of HTML, CSS, XPath, and DOM manipulation for comprehensive web automation testing.</p>
                   <a href="#projects">Read more <i class="fas fa-angle-double-right"></i>
                   </a>
                </div>
                <div class="column right">
                   <div class="info">
-                     <a href="https://reactjs.org/" target="_blank">
-                     <img src="./images/react.png" alt="react" width="80" height="80" />
+                     <a href="https://www.python.org/" target="_blank">
+                     <img src="./images/Python-logo-notext.png" alt="react" width="80" height="80" />
                      </a>
                      <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
                      <img src="./images/javascript.png" alt="javascript" width="80" height="80" />
                      </a>
-                     <a href="https://www.typescriptlang.org/" target="_blank">
-                     <img src="./images/typescript.png" alt="TypeScript" width="80" height="80" />
+                     <a href="https://www.jenkins.io/" target="_blank">
+                     <img src="./images/jenkins.png" alt="TypeScript" width="80" height="80" />
                      </a>
-                     <a href="https://nodejs.org" target="_blank" rel="noreferrer">
-                     <img src="./images/node-js.png" alt="nodejs" width="80" height="80" />
-                     </a>
-                     <a href="https://redux.js.org" target="_blank" rel="noreferrer">
-                     <img src="./images/redux.png" alt="redux" width="80" height="80" />
-                     </a>
-                     <a href="https://jquery.com/" target="_blank" rel="noreferrer">
-                     <img src="./images/jquery.png" alt="jquery" width="80" height="80" />
-                     </a>
+                    
                      <a href="https://www.w3.org/html/" target="_blank">
                      <img src="./images/html5.png" alt="html5" width="80" height="80" />
                      </a>
@@ -155,14 +147,11 @@
                      <a href="https://getbootstrap.com" target="_blank" rel="noreferrer">
                      <img src="./images/bootstrap.png" alt="bootstrap" width="80" height="80" />
                      </a>
-                     <a href="https://sass-lang.com" target="_blank" rel="noreferrer">
-                     <img src="./images/sass.png" alt="sass" width="80" height="80" />
-                     </a>
-                     <a href="https://tailwindcss.com/" target="_blank">
-                     <img src="./images/tailwind-css.png" alt="react" width="80" height="80" />
-                     </a>
-                     <a href="https://www.mongodb.com/" target="_blank" rel="noreferrer">
-                     <img src="./images/mongodb.png" alt="MongoDB" width="80" height="80" />
+                     <a href="https://www.selenium.dev/" target="_blank" rel="noreferrer">
+                        <img src="./images/selinium.png" alt="nodejs" width="80" height="80" />
+                        </a>
+                     <a href="https://github.com/" target="_blank">
+                     <img src="./images/github.png" alt="react" width="80" height="80" />
                      </a>
                      <a href="https://git-scm.com/" target="_blank" rel="noreferrer">
                      <img src="./images/git.png" alt="git" width="80" height="80" />
@@ -179,29 +168,29 @@
             <h2 class="title fadein">My Projects</h2>
             <div class="carousel owl-carousel">
                <div class="card">
-                  <a href="https://foodfire-app.netlify.app/" target="_blank">
+                  <a href="https://github.com/Johnsianthoni/Capstone-1/tree/main/Capstone-1" target="_blank">
                      <div class="box">
-                        <img src="./images/Food Fire.png" alt="Food Fire App">
-                        <p>FoodFire App using React.js</p>
-                        <p>React.js, Parcel.js</p>
+                        <img src="./images/orangehrm.png" alt="Food Fire App">
+                        <p>Implemented the Orange HRM</p>
+                        <p>PIM module</p>
                      </div>
                   </a>
                </div>
                <div class="card">
-                  <a href="https://react-task-dashboard-panel.netlify.app/" target="_blank">
+                  <a href="https://github.com/Johnsianthoni/Capstone-2" target="_blank">
                      <div class="box">
-                        <img src="./images/ReactJs User Dashboard Panel.png" alt="ReactJs User Dashboard Panel">
-                        <p>ReactJs User Dashboard Panel</p>
-                        <p>React.js, Webpack, MUI</p>
+                        <img src="./images/forgrt.png" alt="ReactJs User Dashboard Panel">
+                        <p>Developed and validated the</p>
+                        <p>"Forgot Password" functionality</p>
                      </div>
                   </a>
                </div>
                <div class="card">
-                  <a href="https://chetannada.github.io/FirstReactApp" target="_blank">
+                  <a href="https://github.com/Johnsianthoni/Login-_Page" target="_blank">
                      <div class="box">
-                        <img src="./images/Avatar API.jpg" alt="Avatar API">
-                        <p>Avatar of Developers</p>
-                        <p>React.js, Webpack</p>
+                        <img src="./images/login.png" alt="Avatar API">
+                        <p>Designed and implemented</p>
+                        <p>a html login page</p>
                      </div>
                   </a>
                </div>
@@ -222,21 +211,21 @@
                         <i class="fas fa-user"></i>
                         <div class="info">
                            <div class="head">Name</div>
-                           <div class="sub-title">Chetan Nada</div>
+                           <div class="sub-title">Theyboral Johnsi</div>
                         </div>
                      </div>
                      <div class="row">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="info">
                            <div class="head">Address</div>
-                           <div class="sub-title">Surat, India</div>
+                           <div class="sub-title">Chennai, India</div>
                         </div>
                      </div>
                      <div class="row">
                         <i class="fas fa-envelope email-icon"></i>
                         <div class="info">
                            <div class="head">Email</div>
-                           <div class="sub-title">call2chetannada@gmail.com</div>
+                           <div class="sub-title">theyboanthoni@gmail.com</div>
                         </div>
                      </div>
                   </div>
@@ -245,7 +234,7 @@
                      <div class="wrapper">
                         <div class="button1">
                            <div class="icon">
-                              <a href="https://www.linkedin.com/in/chetannada" target="_blank">
+                              <a href="https://www.linkedin.com/in/theyboral-johnsi-192561297/" target="_blank">
                               <i class="fab fa-linkedin"></i>
                            </div>
                            <span>LinkedIn </a>
@@ -254,7 +243,7 @@
                         <div class="buttonmob">
                            <div class="button1">
                               <div class="icon">
-                                 <a href="https://twitter.com/chetannada" target="_blank">
+                                 <a href="https://twitter.com" target="_blank">
                                  <i class="fab fa-twitter"></i>
                               </div>
                               <span>Twitter </a>
@@ -264,7 +253,7 @@
                         <div class="buttonmob1"></div>
                         <div class="button1">
                            <div class="icon">
-                              <a href="https://github.com/chetannada" target="_blank">
+                              <a href="https://github.com/Johnsianthoni" target="_blank">
                               <i class="fab fa-github"></i>
                            </div>
                            <span>Github </a>
@@ -302,7 +291,7 @@
       <!-- Contact section end -->
       <!-- footer section start -->
       <footer>
-         <span>Created By <a href="https://www.linkedin.com/in/chetannada/" target="_blank">Chetan Nada</a> | <span class="far fa-copyright"></span> 2023 All rights reserved </span>
+         <span>Created By <a href="https://www.linkedin.com/in/theyboral-johnsi-192561297/" target="_blank">Theyboral Johnsi</a> | <span class="far fa-copyright"></span> 2023 All rights reserved </span>
       </footer>
       <!-- footer section end -->
       <!-- External Javascript File start-->
